--- a/source/index.html
+++ b/source/index.html
@@ -20,9 +20,9 @@
         <span class="visually-hidden">Закрыть меню</span>
       </button>
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="index.html" aria-current="page">Главная</a></li>
-        <li class="main-nav__item"><a href="catalog.html">Каталог продукции</a></li>
-        <li class="main-nav__item"><a href="form.html">Подбор программ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="index.html" aria-current="page">Главная</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программ</a></li>
       </ul>
     </nav>
   </header>
@@ -140,8 +140,7 @@
             </a>
           </li>
         </ul>
-      </section> <!-- Убрал svg-шки. вставил span class="visually-hidden" их не было потому что в Sedone я вставлял svg а в них писал area-label.
-      Про спрайты помню. Читал на первом курсе. Где то в тренажёрах было в ознакомитльных целях. -->
+      </section>
       <a class="dev" href="#">
         <p class="dev__name">HTML Academy</p>
         <img class="dev__img" src="img/logo-htmlacademy.svg" alt="Логотип разработчика">
