--- a/source/catalog.html
+++ b/source/catalog.html
@@ -19,9 +19,9 @@
         <span class="visually-hidden">Закрыть меню</span>
       </button>
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="index.html">Главная</a></li>
-        <li class="main-nav__item"><a href="catalog.html" aria-current="page">Каталог продукции</a></li>
-        <li class="main-nav__item"><a href="form.html">Подбор программ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html" aria-current="page">Каталог продукции</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программ</a></li>
       </ul>
     </nav>
   </header>
