--- a/source/index.html
+++ b/source/index.html
@@ -103,8 +103,8 @@
   <footer class="footer">
 
     <div class="footer__address-container">
-      <p class="footer__address">Приглашаем к сотрудничеству дилеров!</p> <!-- Написал с большой буквы. -->
-      <p class="footer__address">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="footer__address-title">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="footer__address-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
 
     <div class="map">
@@ -112,7 +112,6 @@
       <picture class="map__picture">
         <img class="map__img" src="img/alt-location.png" width="320" height="362" alt="Схема проезда">
       </picture>
-      <!-- Добавил альтернативное изображение карты. Яндекс карту убрал пока вообще -->
     </div>
 
     <div class="footer__link-container">
