Базовая стилизация каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,16 +35,16 @@
             <img class="product__image" src="img/catalog-chicken-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-курица.">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Pro 500&#160;г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>500&#160;г</dd>
+              <dd>500&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Курица</dd>
               <dt>Цена</dt>
-              <dd>700&#160;₽</dd>
+              <dd>700&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -54,16 +54,16 @@
             <img class="product__image" src="img/catalog-chicken-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-курица">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Pro 1000 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Pro 1000&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>1000&#160;г</dd>
+              <dd>1000&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Курица</dd>
               <dt>Цена</dt>
-              <dd>1000&#160;₽</dd>
+              <dd>1000&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -73,16 +73,16 @@
             <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Pro 500 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>500&#160;г</dd>
+              <dd>500&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Рыба</dd>
               <dt>Цена</dt>
-              <dd>700&#160;₽</dd>
+              <dd>700&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -92,16 +92,16 @@
             <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Pro 1000 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Pro 1000&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>1000&#160;г</dd>
+              <dd>1000&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Рыба</dd>
               <dt>Цена</dt>
-              <dd>1000&#160;₽</dd>
+              <dd>1000&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -111,16 +111,16 @@
             <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy slim 500 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>500&#160;г</dd>
+              <dd>500&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Гречка</dd>
               <dt>Цена</dt>
-              <dd>400&#160;₽</dd>
+              <dd>400&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -130,16 +130,16 @@
             <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Slim 1000 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Slim 1000&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>1000&#160;г</dd>
+              <dd>1000&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Гречка</dd>
               <dt>Цена</dt>
-              <dd>700&#160;₽</dd>
+              <dd>700&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -149,16 +149,16 @@
             <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
           </a>
           <div class="catalog__wrapper">
-            <h2 class="product__title">
-              <a href="#">Cat Energy Slim 1000 г</a>
-            </h2>
+            <a class="product__link" href="#">
+              <h2 class="product__title">Cat Energy Slim 500&nbsp;г</h2>
+            </a>
             <dl class="product__info">
               <dt>Масса</dt>
-              <dd>500&#160;г</dd>
+              <dd>500&nbsp;г</dd>
               <dt>Вкус</dt>
               <dd>Гречка</dd>
               <dt>Цена</dt>
-              <dd>500&#160;₽</dd>
+              <dd>500&nbsp;₽</dd>
             </dl>
           </div>
           <a class="product__button button" href="#">Заказать</a>
@@ -178,8 +178,8 @@
         <li class="catalog__item product">
           <h2 class="product__title product__title--other">Сахарозаменитель</h2>
           <dl class="product__info product__info--other">
-            <dt>1 упаковка (100&#160;г)</dt>
-            <dd>200&#160;₽</dd>
+            <dt>1 упаковка (100&nbsp;г)</dt>
+            <dd>200&nbsp;₽</dd>
           </dl>
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
@@ -188,7 +188,7 @@
           <h2 class="product__title product__title--other">Питьевая вода</h2>
           <dl class="product__info product__info--other">
             <dt>5 литров</dt>
-            <dd>200&#160;₽</dd>
+            <dd>200&nbsp;₽</dd>
           </dl>
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
@@ -197,7 +197,7 @@
           <h2 class="product__title product__title--other">Молоко</h2>
           <dl class="product__info product__info--other">
             <dt>1 литр</dt>
-            <dd>100&#160;₽</dd>
+            <dd>100&nbsp;₽</dd>
           </dl>
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
@@ -205,8 +205,8 @@
         <li class="catalog__item product">
           <h2 class="product__title product__title--other">Витамины</h2>
           <dl class="product__info product__info--other">
-            <dt>1 упаковка (30&#160;г)</dt>
-            <dd>300&#160;₽</dd>
+            <dt>1 упаковка (30&nbsp;г)</dt>
+            <dd>300&nbsp;₽</dd>
           </dl>
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
@@ -220,8 +220,8 @@
   <footer class="footer">
 
     <div class="footer__address-container">
-      <p class="footer__address">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="footer__address">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="footer__address-title">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="footer__address-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
 
     <div class="map">
