Добавляет базовую стилизацию в форму

--- a/source/form.html
+++ b/source/form.html
@@ -117,8 +117,8 @@
   <footer class="footer">
 
     <div class="footer__address-container">
-      <p class="footer__address">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="footer__address">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="footer__address-titles">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="footer__address-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
 
     <div class="map">
