--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="whdth=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <title>Интернет-магазин Cat Energy</title>
 </head>
