Добавляет сетки главной страницы и страницы формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="whdth=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <title>Интернет-магазин Cat Energy</title>
+  <title>Каталог Cat Energy</title>
 </head>
 
 <body class="page__body">
   <header class="page-header">
-    <a class="page-header__logo logo" href="index.html">
+    <a class="page-header__logo logo" href="index.html" aria-current="page">
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-      <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип catenergy">
+      <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
     <nav class="main-nav main-nav--is-close">
       <button class="btn-burger">
@@ -234,7 +234,7 @@
 
     <div class="footer__link-container">
 
-      <a class="logo" href="index.html" aria-current="page">
+      <a class="logo footer__logo" href="index.html" aria-current="page">
         <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
 
