--- a/source/index.html
+++ b/source/index.html
@@ -5,25 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="whdth=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
-  <title>Интернет-магазин Cat Energy</title>
+  <title>Главная Cat Energy</title>
 </head>
 
 <body class="page__body">
 
   <header class="page-header">
-    <a class="logo" href="index.html" aria-current="page">
+    <a class="page-header__logo logo" href="index.html" aria-current="page">
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
-      <img class="logo__image logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
+      <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--is-close">
+    <nav class="main-nav">
       <button class="btn-burger">
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item"><a class="main-nav__link" href="index.html" aria-current="page">Главная</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог продукции</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
       </ul>
     </nav>
   </header>
@@ -31,10 +31,10 @@
   <main class="main">
 
     <section class="promo">
-      <h1 class="promo__title">Функциональное питание для котов</h1>
+      <h1 class="promo__title">Функциональное<br>питание для котов</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
       <img class="promo__content-image" src="img/index-can-energy-chicken.png" width="280" height="270" alt="Промо изображение. Порция питания для котов Cat Energy Pro. С курицей. 500 грамм.">
-      <a class="promo__button button" href="form.html">Подобрать программу</a>
+      <a class="promo__button button" href="form.html">Подобрать&nbsp;программу</a>
     </section>
 
     <section class="program">
@@ -75,20 +75,20 @@
 
     <section class="sample">
       <h2 class="sample__title">Живой пример</h2>
-      <p class="sample__text">Борис сбросил 5&#160;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+      <p class="sample__text">Борис сбросил 5&nbsp;кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок!
         При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
       <dl class="sample__list">
         <div class="sample__item">
           <dt class="sample__description">Снижение веса</dt>
-          <dd class="sample__value">5&#160;кг</dd>
+          <dd class="sample__value">5&nbsp;кг</dd>
         </div>
         <div class="sample__item">
           <dt class="sample__description">Затрачено времени</dt>
-          <dd class="sample__value">60&#160;дней</dd>
+          <dd class="sample__value">60&nbsp;дней</dd>
         </div>
       </dl>
-      <p class="sample__price-text">Затраты на питание: 15&#160;000&#160;₽</p> <!-- Добавил неразрывный пробел -->
+      <p class="sample__price-text">Затраты на питание: 15&nbsp;000&nbsp;₽</p>
       <div class="slider">
         <div class="slider__images"> <!-- Изменил названия изображений и альты как пологается, без шуток. -->
           <img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
@@ -116,11 +116,9 @@
     </div>
 
     <div class="footer__link-container">
-
-      <a class="logo" href="index.html" aria-current="page">
+      <a class="logo footer__logo" href="index.html" aria-current="page">
         <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
       </a>
-
       <section class="social">
         <h2 class="visually-hidden">Мы в социальных сетях</h2>
         <ul class="social__list">
