продалжает работу с сетками всех станиц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,7 +37,7 @@
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -56,7 +56,7 @@
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Pro 1000&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -71,11 +71,11 @@
         </li>
         <li class="catalog__item product">
           <a class="product__image-wrapper" href="#">
-            <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy Pro. Вкус-рыба.">
+            <img class="product__image" src="img/catalog-fish-small.png" alt="Рацион 500 гамм. Cat Energy<br> Pro. Вкус-рыба.">
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -90,11 +90,11 @@
         </li>
         <li class="catalog__item product">
           <a class="product__image-wrapper" href="#">
-            <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy Pro. Вкус-рыба">
+            <img class="product__image" src="img/catalog-fish-big.png" alt="Рацион 1000 гамм. Cat Energy<br> Pro. Вкус-рыба">
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Pro 1000&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Pro 1000&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -109,11 +109,11 @@
         </li>
         <li class="catalog__item product">
           <a class="product__image-wrapper" href="#">
-            <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-гречка.">
+            <img class="product__image" src="img/catalog-buckwheat-small.png" alt="Рацион 500 гамм. Cat Energy<br> Slim. Вкус-гречка.">
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Pro 500&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Pro 500&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -128,11 +128,11 @@
         </li>
         <li class="catalog__item product">
           <a class="product__image-wrapper" href="#">
-            <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy Slim. Вкус-гречка">
+            <img class="product__image" src="img/catalog-buckwheat-big.png" alt="Рацион 1000 гамм. Cat Energy<br> Slim. Вкус-гречка">
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Slim 1000&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Slim 1000&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
@@ -147,11 +147,11 @@
         </li>
         <li class="catalog__item product">
           <a class="product__image-wrapper" href="#">
-            <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy Slim. Вкус-рис">
+            <img class="product__image" src="img/catalog-rice-small.svg" alt="Рацион 500 гамм. Cat Energy<br> Slim. Вкус-рис">
           </a>
           <div class="catalog__wrapper">
             <a class="product__link" href="#">
-              <h2 class="product__title">Cat Energy Slim 500&nbsp;г</h2>
+              <h2 class="product__title">Cat Energy<br> Slim 500&nbsp;г</h2>
             </a>
             <dl class="product__info">
               <dt>Масса</dt>
