добавляет стили для планшетного размера

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -220,7 +220,7 @@
   </main>
   <footer class="footer">
 
-    <div class="footer__address-container">
+    <div class="footer__address-container footer__address-container--bg">
       <p class="footer__address-title">Приглашаем к сотрудничеству дилеров!</p>
       <p class="footer__address-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
