Работа с каталогом, где то накосячил

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -164,7 +164,7 @@
           </div>
           <a class="product__button button" href="#">Заказать</a>
         </li>
-        <li class="catalog__item">
+        <li class="catalog__item-more">
           <h2 class="catalog__product-description">Показать еще 100500 товаров</h2>
           <p class="catalog__product-text">На самом деле вкусов гораздо больше!</p>
           <a class="catalog__product-button button" href="#">Показать все</a>
@@ -175,8 +175,8 @@
     <section class="catalog catalog--other">
       <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
 
-      <ul class="catalog__list catalog__list-other">
-        <li class="catalog__item product">
+      <ul class="catalog__list catalog__list--other">
+        <li class="catalog__item product product--other">
           <h2 class="product__title product__title--other">Сахарозаменитель</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (100&nbsp;г)</dt>
@@ -185,7 +185,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product">
+        <li class="catalog__item product product--other">
           <h2 class="product__title product__title--other">Питьевая вода</h2>
           <dl class="product__info product__info--other">
             <dt>5 литров</dt>
@@ -194,7 +194,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product">
+        <li class="catalog__item product product--other">
           <h2 class="product__title product__title--other">Молоко</h2>
           <dl class="product__info product__info--other">
             <dt>1 литр</dt>
@@ -203,7 +203,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product">
+        <li class="catalog__item product product--other">
           <h2 class="product__title product__title--other">Витамины</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (30&nbsp;г)</dt>
