--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,7 @@
         </ul>
       </fieldset>
       <fieldset class="form__module module-contacts">
-        <legend class="form__module-legend legend-contacts">Контактрые&nbsp;данные<br>(владельца кота)</legend>
+        <legend class="form__module-legend legend-contacts">Контактрые&nbsp;данные (владельца кота)</legend>
         <ul class="form__module-list">
           <li class="form__module-item">
             <label class="form__field-label" for="e-mail">E-mail:*</label>
@@ -87,7 +87,7 @@
       </fieldset>
       <fieldset class="form__module module-extra">
         <legend class="form__module-legend legent-extra">Дополнительно:</legend>
-        <ul class="form__module-list">
+        <ul class="form__module-list module-list--extra">
           <li class="form__module-check">
             <input class="form__checkbox-input" type="checkbox" checked id="sweetener" name="sweetener">
             <label class="form__checkbox-label" for="sweetener">сахарозаменитель</label>
@@ -106,9 +106,10 @@
           </li>
         </ul>
       </fieldset>
-
-      <button class="form__button button" type="submit">Отправить заявку</button>
-      <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
+      <div class="form__submit field-submit">
+        <button class="form__button button" type="submit">Отправить заявку</button>
+        <p class="form__submit-note"><sup>*</sup> — Обязательные поля</p>
+      </div>
     </form>
   </main>
 
@@ -121,9 +122,7 @@
 
     <div class="map">
       <h2 class="visually-hidden">Схема проезда</h2>
-      <picture class="map__picture">
-        <img class="map__img" src="img/alt-location.png" width="320" height="362" alt="Схема проезда">
-      </picture>
+        <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
     </div>
 
     <div class="footer__link-container">
