Добавляет стили для десктоп версии гравной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -94,7 +94,8 @@
       <div class="slider">
         <div class="slider__images">
           <img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">
-          <img class="slider__after" src="img/cat-lost-weight.png" width="592" height="512" alt="Фотография кота Бориса сбросившего 5 килограмм через 2 месяца на диете Cat Energy">
+          <!--<img class="slider__before" src="img/well-fed-cat.png" width="592" height="512" alt="Фотография кота Бориса до замены обычного корма на корм Cat Energy.">-->
+          <!--<img class="slider__after" src="img/cat-lost-weight.png" width="592" height="512" alt="Фотография кота Бориса сбросившего 5 килограмм через 2 месяца на диете Cat Energy">-->
         </div>
         <div class="slider__compare">
           <button class="slider__images-compare">до после</button>
