Крупные блоки каталога для десктоп версии

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -176,7 +176,7 @@
       <h2 class="catalog__title catalog__title--other">Дополнительные товары</h2>
 
       <ul class="catalog__list catalog__list--other">
-        <li class="catalog__item product product--other">
+        <li class="catalog__item catalog__item--other product--other">
           <h2 class="product__title product__title--other">Сахарозаменитель</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (100&nbsp;г)</dt>
@@ -185,7 +185,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product product--other">
+        <li class="catalog__item catalog__item--other product--other">
           <h2 class="product__title product__title--other">Питьевая вода</h2>
           <dl class="product__info product__info--other">
             <dt>5 литров</dt>
@@ -194,7 +194,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product product--other">
+        <li class="catalog__item catalog__item--other product--other">
           <h2 class="product__title product__title--other">Молоко</h2>
           <dl class="product__info product__info--other">
             <dt>1 литр</dt>
@@ -203,7 +203,7 @@
           <a class="product__button button product__button--other" href="#">Заказать</a>
         </li>
 
-        <li class="catalog__item product product--other">
+        <li class="catalog__item catalog__item--other product--other">
           <h2 class="product__title product__title--other">Витамины</h2>
           <dl class="product__info product__info--other">
             <dt>1 упаковка (30&nbsp;г)</dt>
@@ -222,7 +222,7 @@
 
     <div class="footer__address-container footer__address-container--bg">
       <p class="footer__address-title">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="footer__address-text">ул. Большая конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="footer__address-text">ул. Большая<br> конюшенная, д. 19/8<br> <span>Санкт-Петербург</span></p>
     </div>
 
     <div class="map">
