--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="whdth=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <title>Каталог Cat Energy</title>
 </head>
@@ -14,14 +14,14 @@
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
       <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav main-nav--is-close">
+    <nav class="main-nav main-nav--is-close main-nav--nojs">
       <button class="btn-burger">
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
       </button>
       <ul class="main-nav__list">
         <li class="main-nav__item"><a class="main-nav__link" href="index.html">Главная</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html" aria-current="page">Каталог продукции</a></li>
+        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="catalog.html" aria-current="page">Каталог продукции</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор программ</a></li>
       </ul>
     </nav>
@@ -261,6 +261,7 @@
       </a>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
