--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="whdth=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <title>Главная Cat Energy</title>
 </head>
@@ -15,13 +15,13 @@
       <img class="logo__image logo__image--icon" src="img/icon-images.svg" width="33" height="38" alt="Супер-кот в маске на желтом фоне">
       <img class="logo__image-title" src="img/logo-title.svg" width="101" height="18" alt="Логотип Cat Energy">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--is-close main-nav--nojs">
       <button class="btn-burger">
         <span class="visually-hidden">Открыть меню</span>
         <span class="visually-hidden">Закрыть меню</span>
       </button>
       <ul class="main-nav__list main-nav__list--index">
-        <li class="main-nav__item"><a class="main-nav__link" href="index.html" aria-current="page">Главная</a></li>
+        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active" href="index.html" aria-current="page">Главная</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог&nbsp;продукции</a></li>
         <li class="main-nav__item"><a class="main-nav__link" href="form.html">Подбор&nbsp;программ</a></li>
       </ul>
@@ -113,6 +113,7 @@
 
     <div class="map">
       <h2 class="visually-hidden">Схема проезда</h2>
+        <!--<picture><img src="../source/img/alt-location.png" width="320" height="362"></picture>-->
         <iframe class="map__frame" src="https://yandex.ru/map-widget/v1/?ll=30.321279%2C59.939728&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&sctx=ZAAAAAgBEAAaKAoSCTpdFhObFz1AEc8xIHu9801AEhIJZR2OrtLdyz8RfCk8aHbdwT8iBgABAgMEBSgKOABA5a4HSAFiSHJlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vTWVkaWFGbG93L1N0b3JpZXNDb250ZW50VHlwZT1vbGRfbWVkaWFfY2xhc3NpZmllcmoCcnWdAc3MTD2gAQCoAQC9Af0QG6HCAR67t8jOpgLTrNeb5AbG1I3fwASjq%2FbB7AH4q77E7AKCAinQlNC%2B0LHQsNCy0LjRgtGMINC60LDRgNGC0YMg0L3QsCDRgdCw0LnRgooCAJICAJoCDGRlc2t0b3AtbWFwcw%3D%3D&sll=30.321279%2C59.939728&source=serp_navig&sspn=0.046704%2C0.013039&tab=inside&text=%D0%94%D0%BE%D0%B1%D0%B0%D0%B2%D0%B8%D1%82%D1%8C%20%D0%BA%D0%B0%D1%80%D1%82%D1%83%20%D0%BD%D0%B0%20%D1%81%D0%B0%D0%B9%D1%82&z=15.4"></iframe>
     </div>
 
@@ -146,6 +147,7 @@
       </a>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
